# mek-sweet-v0.1.1

./: README.md  pyproject.toml
src/mek_sweet/: __init__.py  agent.py
src/mek_sweet/flows/: __init__.py
src/mek_sweet/providers/: __init__.py
src/mek_sweet/toolkits/: __init__.py  code_interpreter.py  file_operations.py  memory.py  web_search.py
